kubernetes/storage/04-nextcloud.deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-deployment
  labels:
    app: nextcloud
  namespace: storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      volumes:
        - name: nextcloud-storage
          persistentVolumeClaim:
            claimName: nfs-pvc-nextcloud
      containers:
        - name: nextcloud
          image: nextcloud
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nextcloud-storage
              mountPath: /var/www/html
              subPath: storage
        - name: mysql
          image: mariadb
          volumeMounts:
            - name: nextcloud-storage
              mountPath: /var/lib/mysql
              subPath: database
          ports:
            - containerPort: 3306
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
