kubernetes/storage/nextcloud.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: nextcloud-deployment
    labels: 
        app: nextcloud
    namespace: storage
spec: 
    replicas: 1
    selector: 
        matchLabels: 
            app: nextcloud
    template: 
        metadata: 
            labels: 
                app: nextcloud
        spec: 
            volumes: 
                - name: nextcloud-storage
                  persistentVolumeClaim: 
                      claimName: nfs-pvc-nextcloud
            containers: 
                - name: nextcloud
                  image: nextcloud
                  ports: 
                      - containerPort: 80
                  volumeMounts: 
                      - name: nextcloud-storage
                        mountPath: /var/www/html
                        subPath: storage
                - name: mysql
                  image: mariadb
                  volumeMounts: 
                      - name: nextcloud-storage
                        mountPath: /var/lib/mysql
                        subPath: database
                  ports: 
                      - containerPort: 3306
                - name: redis
                  image: redis:alpine
                  ports: 
                      - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata: 
    name: nextcloud-service
    namespace: storage
spec: 
    selector: 
        app: nextcloud
    ports: 
        - port: 80
          targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
    name: nextcloud-ingress
    namespace: storage
    annotations:
        nginx.ingress.kubernetes.io/configuration-snippet: |
            more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains; preload";
            location = /.well-known/carddav {
                return 301 $scheme://$host/remote.php/dav;
            }
            location = /.well-known/caldav {
                return 301 $scheme://$host/remote.php/dav;
            }
spec: 
    rules: 
        - host: drive.example.io
          http: 
              paths: 
                  - path: /
                    pathType: Prefix
                    backend: 
                        service: 
                            name: nextcloud-service
                            port: 
                                number: 80
