kubernetes/storage/paperless.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-deployment
  labels:
    app: paperless
  namespace: storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      volumes:
        - name: paperless-storage
          persistentVolumeClaim:
            claimName: ssd-claim-paperless
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
        - name: mysql
          image: mariadb
          volumeMounts:
            - name: paperless-storage
              mountPath: /var/lib/mysql
              subPath: database
          ports:
            - containerPort: 3306
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: paperless-storage
              subPath: data
            - mountPath: /usr/src/paperless/media
              name: paperless-storage
              subPath: media
            - mountPath: /usr/src/paperless/export
              name: paperless-storage
              subPath: export
            - mountPath: /usr/src/paperless/consume
              name: paperless-storage
              subPath: consume
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-service
  namespace: storage
spec:
  selector:
    app: paperless
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ingress
  namespace: storage
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  rules:
    - host: paper.example.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-service
                port:
                  number: 8000
